syntax = "proto3";

package operational;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_enum_prefix_all) = true;

message BlockAccountRequest {
    string account_id = 1 [(gogoproto.customname) = "AccountID"];
}

message NewOrgCreatedEvent {
	string initial_provider_entity_id = 1 [(gogoproto.customname) = "InitialProviderEntityID"];
	string org_support_thread_id = 2 [(gogoproto.customname) = "OrgSupportThreadID"];
	string spruce_support_thread_id = 3 [(gogoproto.customname) = "SpruceSupportThreadID"];
	int64 org_created = 4;
}